--- a/taotao-cloud-auth-facade/build.gradle
+++ b/taotao-cloud-auth-facade/build.gradle
@@ -33,11 +33,8 @@
  */
 
 dependencies {
+    api project(":taotao-cloud-auth-api")
     api project(":taotao-cloud-auth-application")
-    api project(":taotao-cloud-auth-domain")
-    api project(":taotao-cloud-auth-infrastructure")
-    api project(":taotao-cloud-auth-integration")
-    api project(":taotao-cloud-auth-common")
 }
 
 
