--- a/gradle/google-tools-jib.gradle
+++ b/gradle/google-tools-jib.gradle
@@ -26,14 +26,9 @@ jib {
                     "-Duser.timezone=Asia/Shanghai"]
         mainClass = "com.taotao.cloud.monitor.TaoTaoCloudMonitorApplication"
         args = ["some", "args"]
-        ports = ["33332"]
-<<<<<<< HEAD
-        //labels = ["app_name": "taotao-cloud-goods", "port": "33332"]
-        environment = ["app_name": "taotao-cloud-goods", "port": "33332"]
-=======
-        //labels = ["app_name": "taotao-cloud-auth", "port": "33332"]
-        environment = ["app_name": "taotao-cloud-auth", "port": "33332"]
->>>>>>> 29663ccb7edacda0a14cae357a098c72a17fe3bc
+        ports = ["33331"]
+        //labels = ["app_name": "taotao-cloud-ddd", "port": "33331"]
+        environment = ["app_name": "taotao-cloud-ddd", "port": "33331"]
         format = "OCI"
         user = "root"
         volumes = ["/root/logs"]
