--- a/taotao-cloud-auth-assembly/build.gradle
+++ b/taotao-cloud-auth-assembly/build.gradle
@@ -93,7 +93,7 @@ classes {
     dependsOn 'createProperties'
 }
 
-task bootJarTest {
+tasks.register('bootJarTest') {
     dependsOn 'clean'
     doFirst {
         System.setProperty("profile", "test")
@@ -101,7 +101,7 @@ task bootJarTest {
     finalizedBy("bootJar")
 }
 
-task bootJarProduction {
+tasks.register('bootJarProduction') {
     dependsOn 'clean'
     doFirst {
         System.setProperty("profile", "prod")
@@ -110,7 +110,7 @@ task bootJarProduction {
 }
 
 configurations {
-    all {
+    configureEach {
         resolutionStrategy.cacheChangingModulesFor 0, "seconds"
         resolutionStrategy.cacheDynamicVersionsFor 0, "seconds"
 
@@ -124,9 +124,9 @@ configurations {
         //implementation 'com.alibaba:fastjson:2.0.52!!'
 
         resolutionStrategy {
-            //force "org.codehaus.groovy:groovy:4.0.0"
-            //force 'org.antlr:antlr4:4.13.2'
-            //force 'net.minidev:json-smart:2.5.1'
+            force "org.codehaus.groovy:groovy:4.0.0"
+            force 'org.antlr:antlr4:4.13.2'
+            force 'net.minidev:json-smart:2.5.1'
             //todo 临时使用
             force "io.opentelemetry:opentelemetry-api-incubator:1.45.0-alpha"
         }
@@ -139,9 +139,5 @@ configurations {
         //exclude group: "org.apache.logging.log4j", module: "log4j-api"
         exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
         exclude group: "commons-logging", module: "commons-logging"
-        exclude group: "io.zipkin.brave", module: "brave"
-        exclude group: "io.zipkin.reporter2", module: "zipkin-reporter-brave"
-        exclude group: "io.micrometer", module: "micrometer-tracing-bridge-brave"
-        exclude group: "com.alibaba.nacos", module: "logback-adapter"
     }
 }
