--- a/taotao-cloud-auth-domain/build.gradle
+++ b/taotao-cloud-auth-domain/build.gradle
@@ -53,7 +53,6 @@
  * 并且可以增加流控、监控、日志、权限，分布式锁，相较于领域层功能更为丰富。
  */
 
-
 dependencies {
     api project(":taotao-cloud-auth-api")
     api project(":taotao-cloud-auth-common")
@@ -96,6 +95,71 @@ dependencies {
     api "io.github.shuigedeng:taotao-boot-starter-flowengine"
     api "io.github.shuigedeng:taotao-boot-starter-web"
     api "io.github.shuigedeng:taotao-boot-starter-webagg"
+    api "io.github.shuigedeng:taotao-boot-starter-security-spring"
+    api "io.github.shuigedeng:taotao-boot-starter-security-justauth"
+
+    //https://central.sonatype.com/artifact/org.springframework.session/spring-session-data-redis
+    api 'org.springframework.session:spring-session-data-redis:3.4.1'
+
+    //https://central.sonatype.com/artifact/com.github.binarywang/weixin-java-pay?smo=true
+    api 'com.github.binarywang:weixin-java-mp:4.7.0'
+    api 'com.github.binarywang:weixin-java-miniapp:4.7.0'
+
+    //api 'top.dcenter:justAuth-spring-security-starter:1.1.25'
+
+    //https://search.maven.org/artifact/org.webjars/jquery
+    api "org.webjars:jquery:3.7.1"
+    //https://search.maven.org/artifact/org.webjars/bootstrap
+    api "org.webjars:bootstrap:5.3.3"
+    //https://search.maven.org/artifact/org.webjars/webjars-locator-lite
+    api "org.webjars:webjars-locator-lite:1.0.1"
+    api 'org.webjars:font-awesome:6.5.1'
+    api 'org.webjars.bower:jquery-backstretch:2.1.17'
+    api 'org.webjars:uniform:2.1.2-1'
+    api 'org.webjars.npm:animate.css:4.1.1'
+    api "org.webjars.npm:mdi__font:7.4.47"
+    api 'org.webjars.npm:quasar:2.15.1'
+    api("org.webjars.npm:vue:3.4.21") {
+        exclude group: "org.webjars.npm", module: "babel__parser"
+    }
+    api 'org.webjars.npm:babel__parser:7.24.0'
+
+    api 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.3.RELEASE'
+    api "org.springframework.boot:spring-boot-starter-thymeleaf"
+    api 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
+
+    api "org.springframework.boot:spring-boot-starter-thymeleaf"
+    api "org.springframework.boot:spring-boot-starter-security"
+    api 'org.springframework.security:spring-security-crypto'
+    api "org.springframework.security:spring-security-oauth2-jose"
+    api "org.springframework.boot:spring-boot-starter-oauth2-client"
+    api "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
+    api "org.springframework.boot:spring-boot-starter-oauth2-authorization-server"
+
+    //https://search.maven.org/artifact/com.nimbusds/nimbus-jose-jwt
+    api "com.nimbusds:nimbus-jose-jwt:10.0.1"
+    //https://search.maven.org/artifact/com.nimbusds/oauth2-oidc-sdk
+    api 'com.nimbusds:oauth2-oidc-sdk:11.20.1'
+
+    api "org.apache.commons:commons-collections4"
+
+    api "org.springframework:spring-webflux"
+    api "io.projectreactor.netty:reactor-netty-http"
+    api "io.projectreactor.netty:reactor-netty"
+
+    //百度人脸识别以及登录
+    //https://search.maven.org/artifact/com.baidu.aip/java-sdk
+    api('com.baidu.aip:java-sdk:4.16.19') {
+        exclude group: "commons-logging", module: "commons-logging"
+        exclude group: "org.slf4j", module: "slf4j-simple"
+        exclude group: "org.slf4j", module: "slf4j-api"
+    }
+
+    // 阿里云app手机一键登录
+    //https://search.maven.org/artifact/com.aliyun/dypnsapi20170525
+    api 'com.aliyun:dypnsapi20170525:1.2.3'
+
+
 
     //AVIATOR——轻量级JAVA表达式求值引擎 https://blog.csdn.net/ZhangQingmu/article/details/125087255
     //https://code.google.com/p/aviator/
@@ -139,4 +203,5 @@ dependencies {
     api "com.querydsl:querydsl-jpa:5.1.0:jakarta"
     api "jakarta.persistence:jakarta.persistence-api:3.1.0"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
+
 }
