--- a/taotao-cloud-auth-facade/build.gradle
+++ b/taotao-cloud-auth-facade/build.gradle
@@ -35,6 +35,7 @@
 dependencies {
     api project(":taotao-cloud-auth-api")
     api project(":taotao-cloud-auth-application")
+    api project(":taotao-cloud-auth-infrastructure")
 }
 
 
