--- a/taotao-cloud-auth-facade/build.gradle
+++ b/taotao-cloud-auth-facade/build.gradle
@@ -33,9 +33,9 @@
  */
 
 dependencies {
-    api project(":taotao-cloud-auth-api")
     api project(":taotao-cloud-auth-application")
     api project(":taotao-cloud-auth-infrastructure")
+    api project(":taotao-cloud-auth-integration")
 }
 
 
