--- a/taotao-cloud-auth-infrastructure/build.gradle
+++ b/taotao-cloud-auth-infrastructure/build.gradle
@@ -16,6 +16,7 @@
 
 dependencies {
     api project(":taotao-cloud-auth-domain")
+    api project(":taotao-cloud-auth-application")
 
     annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
     api "com.querydsl:querydsl-jpa:5.1.0:jakarta"
