--- a/taotao-cloud-auth-domain/build.gradle
+++ b/taotao-cloud-auth-domain/build.gradle
@@ -100,15 +100,15 @@ dependencies {
     api 'org.springframework.session:spring-session-data-redis:3.5.0'
 
     //https://central.sonatype.com/artifact/com.github.binarywang/weixin-java-pay?smo=true
-    api 'com.github.binarywang:weixin-java-mp:4.7.5.B'
-    api 'com.github.binarywang:weixin-java-miniapp:4.7.5.B'
+    api 'com.github.binarywang:weixin-java-mp:4.7.5-20250603.122757'
+    api 'com.github.binarywang:weixin-java-miniapp:4.7.5-20250603.122757'
 
     //api 'top.dcenter:justAuth-spring-security-starter:1.1.25'
 
     //https://search.maven.org/artifact/org.webjars/jquery
     api "org.webjars:jquery:3.7.1"
     //https://search.maven.org/artifact/org.webjars/bootstrap
-    api "org.webjars:bootstrap:5.3.3"
+    api "org.webjars:bootstrap:5.3.6"
     //https://search.maven.org/artifact/org.webjars/webjars-locator-lite
     api "org.webjars:webjars-locator-lite:1.1.0"
     api 'org.webjars:font-awesome:6.5.1'
@@ -147,7 +147,7 @@ dependencies {
 
     //百度人脸识别以及登录
     //https://search.maven.org/artifact/com.baidu.aip/java-sdk
-    api('com.baidu.aip:java-sdk:4.16.19') {
+    api('com.baidu.aip:java-sdk:4.16.20') {
         exclude group: "commons-logging", module: "commons-logging"
         exclude group: "org.slf4j", module: "slf4j-simple"
         exclude group: "org.slf4j", module: "slf4j-api"
