--- a/taotao-cloud-auth-domain/build.gradle
+++ b/taotao-cloud-auth-domain/build.gradle
@@ -100,8 +100,8 @@ dependencies {
     api 'org.springframework.session:spring-session-data-redis:3.5.1'
 
     //https://central.sonatype.com/artifact/com.github.binarywang/weixin-java-pay?smo=true
-    api 'com.github.binarywang:weixin-java-mp:4.7.5-20250603.122757'
-    api 'com.github.binarywang:weixin-java-miniapp:4.7.5-20250603.122757'
+    api 'com.github.binarywang:weixin-java-mp:4.7.6.B'
+    api 'com.github.binarywang:weixin-java-miniapp:4.7.6.B'
 
     //api 'top.dcenter:justAuth-spring-security-starter:1.1.25'
 
@@ -137,7 +137,7 @@ dependencies {
     //https://search.maven.org/artifact/com.nimbusds/nimbus-jose-jwt
     api "com.nimbusds:nimbus-jose-jwt:10.3"
     //https://search.maven.org/artifact/com.nimbusds/oauth2-oidc-sdk
-    api 'com.nimbusds:oauth2-oidc-sdk:11.25'
+    api 'com.nimbusds:oauth2-oidc-sdk:11.26'
 
     api "org.apache.commons:commons-collections4"
 
@@ -147,7 +147,7 @@ dependencies {
 
     //百度人脸识别以及登录
     //https://search.maven.org/artifact/com.baidu.aip/java-sdk
-    api('com.baidu.aip:java-sdk:4.16.20') {
+    api('com.baidu.aip:java-sdk:4.16.22') {
         exclude group: "commons-logging", module: "commons-logging"
         exclude group: "org.slf4j", module: "slf4j-simple"
         exclude group: "org.slf4j", module: "slf4j-api"
