--- a/taotao-cloud-auth-domain/build.gradle
+++ b/taotao-cloud-auth-domain/build.gradle
@@ -216,6 +216,14 @@ configurations {
             force 'org.webjars.npm:csstype:3.1.3'
             force 'org.webjars.npm:postcss:8.4.39'
             force 'org.webjars.npm:nanoid:4.0.2'
+
+            force 'org.webjars.bower:jquery:3.7.1'
+            force 'org.webjars.npm:magic-string:0.30.19'
+            force 'org.webjars.npm:estree-walker:3.0.3'
+            force 'org.webjars.npm:source-map-js:1.2.1'
+            force 'org.webjars.npm:entities:6.0.1'
+            force 'org.webjars.npm:picocolors:1.1.1'
+
         }
 
         //exclude group: "log4j", module: "log4j"
